Scrollbars issue resolved and also video tutorials

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -145,11 +145,12 @@ td {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #ccc;
+  background: rgba($color: #000, $alpha: 0.07);
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #9999;
+  background: rgba($color: #000, $alpha: 0.2);
+  transition: all 0.2s ease-out;
 }
